embeded google maps to Contacts-1024 page

--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
             </header>
         <main>
             <div class="contentArea">
-                <div class="googleMapIn">
-                    <h2 class="googleMapInHeader">stay in touch</h2>
+                <div class="googleMap">
+                    <h2 class="googleMapHeader">stay in touch</h2>
+                    <iframe class="googleMapEmbeded" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3026.6394517216854!2d-73.9348063!3d40.6598775!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24416947c2109%3A0x82765c7404007886!2sBrooklyn%2C+NY%2C+USA!5e0!3m2!1sen!2sua!4v1510007366393" width="440" height="410" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
                 <div class="contactsTable">
                     <table class="marmoraRoad">
