corrected coomon_style

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="contentArea">
                 <div class="googleMap">
                     <h2 class="googleMapHeader">stay in touch</h2>
-                    <iframe class="googleMapEmbeded" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3026.6394517216854!2d-73.9348063!3d40.6598775!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24416947c2109%3A0x82765c7404007886!2sBrooklyn%2C+NY%2C+USA!5e0!3m2!1sen!2sua!4v1510007366393" width="440" height="410" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    <iframe class="googleMapEmbeded" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2020.0765644024698!2d-73.93464789094688!3d40.65865385274216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24416947c2109%3A0x82765c7404007886!2z0JHRgNGD0LrQu9GW0L0sINCd0YzRji3QmdC-0YDQuiwg0KHQv9C-0LvRg9GH0LXQvdGWINCo0YLQsNGC0Lgg0JDQvNC10YDQuNC60Lg!5e0!3m2!1suk!2sua!4v1510008586981" width="450" height="410" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
                 <div class="contactsTable">
                     <table class="marmoraRoad">
